[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/ui/PanelBrown.png" type="Texture" id=1]
[ext_resource path="res://StatsPanel.gd" type="Script" id=2]
[ext_resource path="res://segoeuil.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://StatIncreaser.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/ui/32beige.png" type="Texture" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 13.0
margin_right = 17.0
margin_top = 17.0
margin_bottom = 20.0

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 3 )

[node name="Stats" type="Panel"]
margin_top = 0.358486
margin_right = 223.0
margin_bottom = 368.358
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="AP" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -205.063
margin_top = 28.5731
margin_right = -63.0631
margin_bottom = 56.5731
custom_fonts/font = SubResource( 2 )
text = "AP: 4"
align = 2
valign = 1
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 7.0
margin_bottom = 21.0
custom_constants/separation = -2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Name" type="Label" parent="VBoxContainer"]
margin_right = 211.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
text = "Name: Playerasdasdas"
valign = 1

[node name="Level" type="Label" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 211.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "Level: 5"
valign = 1

[node name="StatIncreaser" parent="VBoxContainer" instance=ExtResource( 4 )]

[node name="StatIncreaser2" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 78.0
margin_bottom = 106.0
type = 1

[node name="StatIncreaser3" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 104.0
margin_bottom = 132.0
type = 2

[node name="StatIncreaser4" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 130.0
margin_bottom = 158.0
type = 3

[node name="Stat4" type="Label" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 211.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 2 )
text = "Level: 5"
valign = 1

[node name="Stat5" type="Label" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 211.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 2 )
text = "Level: 5"
valign = 1

[node name="Stat6" type="Label" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 211.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 2 )
text = "Level: 5"
valign = 1

[node name="Stat7" type="Label" parent="VBoxContainer"]
margin_top = 234.0
margin_right = 211.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 2 )
text = "Level: 5"
valign = 1

[node name="Stat8" type="Label" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 211.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 2 )
text = "Level: 5"
valign = 1

[node name="Stat9" type="Label" parent="VBoxContainer"]
margin_top = 286.0
margin_right = 211.0
margin_bottom = 314.0
custom_fonts/font = SubResource( 2 )
text = "Level: 5"
valign = 1

[node name="Stat10" type="Label" parent="VBoxContainer"]
margin_top = 312.0
margin_right = 211.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 2 )
text = "Level: 5"
valign = 1

[node name="Stat11" type="Label" parent="VBoxContainer"]
margin_top = 338.0
margin_right = 211.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 2 )
text = "Level: 5"
valign = 1

[node name="ApplyButton" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 161.486
margin_top = 31.6426
margin_right = 214.486
margin_bottom = 55.6426
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ApplyButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "APPLY"
align = 1
valign = 1
[connection signal="pressed" from="ApplyButton" to="." method="_on_ApplyButton_pressed"]
